# langchain-course

./: chains.py  ingestion.py  integration.py  langchain_client.py  main-faiss.py  main.py  nodes.py  pyproject.toml  react.py  schemas.py  tool_executor.py
backend/: core.py
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generations.py  hallucination_grader.py  retreival_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/chains/tests/data/rag-lilianwent/: chroma.sqlite3
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
