[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "black>=25.9.0",
    "faiss-cpu>=1.12.0",
    "isort>=7.0.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-pinecone>=0.2.13",
    "langchainhub>=0.1.21",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
]
