[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "certifi>=2025.10.5",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.0",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langchain-pinecone>=0.2.13",
    "langchainhub>=0.1.21",
    "nltk>=3.9.2",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "pypdf>=6.1.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.15",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "watchdog>=6.0.0",
]
